tests/ui/type_invalid_projection_target.ql
fn main() -> Int {
    let value = 1
    value.name;
    value[0];
    return 0
}
